--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1638,107 +1638,107 @@ stories:
   domain: http://www.metropolisplanet.com/
   link: https://www.metropolisplanet.com/sports/lady-patriots-win-city-of-metropolis-tourney/image_5b85b9d8-3183-5084-a41c-5a8ff6bcd2fa.html
 images:
-- name: soldier-kneeling-26304845730-d4e495e25f-o-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crunch-paper.jpg
-- name: mediterranean-mediterranean-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-sunday.jpg
-- name: gypsymosaic-gypsy-eyes-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-deep-connections.jpg
-- name: dragon-desert-desert-dragon-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit-5.jpg
-- name: aws-s3-stories-old-barn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-barn.jpg
-- name: ellis-island-ellisisland-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
-- name: cargo-ship-cargo-ship-on-sea-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-post-modern.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-- name: walled-garden-walled-garden-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-attack-planes.jpg
-- name: oldtrain-oldtrain-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-propaganda-leaflets.jpg
-- name: nazi-invasion-P6180010.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P6180010.jpg
-- name: oldtrain-oldtrain-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-yellow-collage.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
-- name: stories-green-gears-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-green-gears-matrix.jpg
-- name: razorwire-DSC-0080-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-rainbow-festival.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-5.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
-- name: downtheline-downtheline-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-creativity.jpg
-- name: abe-lincoln-one-wols-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-15-87.jpg
-- name: curtain-curtain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-creativity.jpg
-- name: oldhouse-granaryfield.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield.jpg
-- name: old-cabin-oldcabin-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-umberto-bocc.jpg
-- name: beach-clouds-lifeguard-beachclouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-dali.jpg
-- name: catacombs-catacombs-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-spagetti-accident.jpg
-- name: ellis-island-ellis-island-room-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crafty-painting.jpg
-- name: sand-hand-sand-hand-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-granite.jpg
-- name: fence-fence-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-marcel-duchamp.jpg
-- name: copper-circuit-downtown-light-posts.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-light-posts.jpg
-- name: docks-docks-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-collage.jpg
-- name: la-muse-gears-pipes-plumbing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-gears-pipes-plumbing.jpg
-- name: powerlines-power-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-internet-numbers.jpg
-- name: razorcliff-razorcliff-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-emily-carr.jpg
-- name: rockingchair-rockingchair-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crafty-painting.jpg
-- name: oldhouse-granaryfield-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-space-pizza.jpg
-- name: amusement-park-amusement-park-2-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-free-woman.jpg
-- name: nazi-invasion-washington-monument-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-washington-monument-afar.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-circuit-3.jpg
-- name: old-barn-old-barn-1500-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-soul.jpg
-- name: sand-hand-sand-hand-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-internet-numbers.jpg
-- name: amusement-park-amusement-park-2-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gred-mash.jpg
-- name: copper-circuit-hollywood-sign-with-tower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hollywood-sign-with-tower.jpg
-- name: adam-smith-adam-smith-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-smoking-cigarette.jpg
-- name: carry-load-carryload-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-pablo-blue.jpg
-- name: downtown-los-angeles-downtown-la-dali-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dali-two.JPG
-- name: border-fence-border-fence-on-hill-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-ww2-color.jpg
-- name: curtain-curtain-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alberto-giacometti.jpg
-- name: downtown-trucksilo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-alien-goggles.jpg
-- name: curtain-curtain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-kand-two.jpg
+- name: aws-s3-stories-old-gas-pumps.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-gas-pumps.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
+- name: crow_creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_creativity.jpg
+- name: carry-load-carryload-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-pond.jpg
+- name: mistywoods-babyfoot-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-asteroids.jpg
+- name: old-school-house-old-schoolhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-rainbow-festival.jpg
+- name: art-museum-art-museum-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colorful-blocks.jpg
+- name: bf-skinner-small-lighthouse_36556509232_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-small-lighthouse_36556509232_o.jpg
+- name: catacombs-catacombs-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-green-zuma.jpg
+- name: capital-battle-capitolbattle-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-storm.jpg
+- name: gypsymosaic-gypsy-eyes-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+- name: nazi-invasion-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-please-do-not-feed-the-pigeon.jpg
+- name: border-fence-border-fence-on-hill-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smooth-ride.jpg
+- name: store-on-corner-store-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-light-dali.jpg
+- name: catacombs-catacombs-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purple-storm.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-three.jpg
+- name: miamibeach-miamibeach-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-gred-mash.jpg
+- name: fence-fence-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-smoking-cigarette.jpg
+- name: trucksilo-trucksilo-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-constitution.jpg
+- name: blossombar-aqua-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-00-00.jpg
+- name: capital-battle-capitolbattle-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-atari-asteroids.jpg
+- name: stories-redes-fast-flux-623x425-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-redes-fast-flux-623x425-blue-electricity.jpg
+- name: store-on-corner-oldcabin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-deep-connections.jpg
+- name: crow_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_pond.jpg
+- name: fence-fence-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sunday.jpg
+- name: oldhotel-oldhotel-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-matrix.jpg
+- name: stalin-time-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty_36744433525_o.jpg
+- name: carry-load-carryload-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-soul.jpg
+- name: curtain-curtain-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-alien-goggles.jpg
+- name: la-muse-nyc-skyline-from-ferry.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-skyline-from-ferry.jpg
+- name: containership-containership-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-matrix.jpg
+- name: old-cabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
+- name: file-00-01-19-48.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-01-19-48.jpg
+- name: aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: old-granary-field-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colored-circuits.jpg
+- name: white-house-whitehouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sunday.jpg
+- name: stalin-time-downtown-125thstreet.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-125thstreet.jpg
+- name: abandonedbuildings_plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_plentiful.jpg
+- name: statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
+- name: oldbarn-oldbarn-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-yellow-paper.jpg
+- name: old-door-lock-old-door-lock-2-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-neo-instinct.jpg
+- name: beach-rocks-beach-rocks-currents-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-mucha-mult.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
+- name: san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
+- name: christianity-christianity-under-construction-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-free-woman.jpg
 - name: braceros-domingo-ulloa-capital-records-building.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital-records-building.jpg
-- name: stories-new-72-124-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-72-124-800-500-0-max-0--1--1.jpg
-- name: amusement-park-amusement-park-2-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-copper-circuit-2.jpg
+- name: old-granary-field-granaryfield-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-really-hot.jpg
+- name: gypsymosaic-gypsy-eyes-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-satan-red.jpg
+- name: abandonedbuildings_wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_wols.jpg
+- name: white-house-whitehouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-neo-instinct.jpg
 ---
 German Governing Parties Seek Ban Of Hezbollah In Europe.&nbsp;Kylie Jenner Invites Travis Scott To 'all Family Events'.&nbsp;Billie Roberta Buckles.&nbsp;Connecticut Lawmakers Pass Settlement With State Hospitals.&nbsp;Puerto Rico Cockfighters Go To Ring In Federal Ban Defiance.&nbsp;Two Alexandria Funeral Homes To Share Transport Services.&nbsp;Notre Dame Michigan Football.&nbsp;Area Hospital Volunteers Earn Awards.&nbsp;
