--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1666,5 +1666,108 @@ stories:
   state: Oklahoma
   domain: http://www.edmondsun.com/
   link: https://www.edmondsun.com/news/area-hospital-volunteers-earn-awards/article_1619dda8-211f-11ea-98e7-ab24811904bb.html
+images:
+- name: cargo-ship-cargo-ship-on-sea-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-china-prop.jpg
+- name: old-house-oldhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-brush.jpg
+- name: stalin-time-shipping-docks_36331347010_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-shipping-docks_36331347010_o.jpg
+- name: old-house-oldhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purp-paper.jpg
+- name: downtheline-downtheline-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-marcel-duchamp.jpg
+- name: crow_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sand_paper.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-colorful-blocks.jpg
+- name: old-gas-pumps-oldgaspumps-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-asteroids.jpg
+- name: stalin-time-high-speed-train-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-high-speed-train-station.jpg
+- name: amusement-park-amusement-park-2-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-matrix.jpg
+- name: bf-skinner-statue-face-looking-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-face-looking-up.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: stalin-time-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-building-seattle-clouds.jpg
+- name: paris-paris-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-circuit.jpg
+- name: sand-hand-sand-hand-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-kand-two.jpg
+- name: meadowbutterfly-meadow-butterfly-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-asteroids.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-china-prop.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-smooth-ride.jpg
+- name: wreck-DSC_0267.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-DSC_0267.jpg
+- name: copper-circuit-old-building-barcelona-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-barcelona-waterfront.jpg
+- name: copper-circuit-crow-stailess-steal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crow-stailess-steal.jpg
+- name: meadowbutterfly-meadow-butterfly-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colored-circuits.jpg
+- name: oldhouse-granaryfield-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-alberto-giacometti.jpg
+- name: old-cabin-oldcabin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-circuit.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-electricity.jpg
+- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+- name: powerlines-power-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-smooth-ride.jpg
+- name: border-crossing-bordercrossing-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-cinnamon-rolls.png
+- name: castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-really-hot.JPG
+- name: udnie-DSC_0035-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0035-2.jpg
+- name: power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+- name: gypsymosaic-gypsy-eyes-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-deep-connections.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-matrix.jpg
+- name: ellis-island-ellis-island-room-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gred-mash.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+- name: powerlines-power-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-gan-vogh.jpg
+- name: old-church-oldchurch-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-spagetti-accident.jpg
+- name: capital-battle-capitolbattle-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-bright-sand.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-marcel-duchamp.JPG
+- name: walled-garden-walled-garden-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-monet-one.jpg
+- name: aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+- name: old-door-lock-old-door-lock-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-emily-carr.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
+- name: braceros-domingo-ulloa-old-building-seattle-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-building-seattle-clouds.jpg
+- name: store-on-corner-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
+- name: windowmountain-window-mountain-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-green-zuma.jpg
+- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-pond.jpg
+- name: mistywoods-babyfoot-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-smoking-cigarette.jpg
+- name: windowmountain-window-mountain-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-marcel-duchamp.jpg
 ---
 Florence Pugh Won't Apologise.&nbsp;Phyllis Kay Brooks Morgan.&nbsp;Names In The News.&nbsp;Silent Sam Voices His Own Opinion.&nbsp;House Votes To Impeach Trump, Bossier Congressman Mike Johnson Votes No.&nbsp;Marion County Officials And Citizens React To Impeachment.&nbsp;Indian Police Ban Protests Amid Citizenship Law Outrage.&nbsp;County, City Receive Funds For Transportation Studies.&nbsp;
